--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ table {
 
 .banner {
     position: absolute;
-    width: 1440px;
+    width: 100%;
     height: 82px;
     left: 0px;
     top: 0px;
