--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ table {
 }
 
 .banner {
-    position: absolute;
+    position: relative;
     width: 100%;
     height: 82px;
     left: 0px;
@@ -55,7 +55,6 @@ table {
     
 }
 .h2-banner {
-    position: absolute;
     width: 507px;
     height: 45.92px;
     left: 158px;
